# ros2_bot

src/action_interfaces/: CMakeLists.txt  package.xml
src/action_interfaces/action/: GoToBall.action
src/actions_py/: package.xml  setup.py
src/actions_py/actions_py/: ball_tracker_behaviour.py  find_ball_client.py  find_ball_server.py  go_to_ball_client.py  go_to_ball_pose_server.py  go_to_ball_server.py  process_image.py
src/actions_py/launch/: launch_servers.launch.py
src/articubot_one/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
src/articubot_one/description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  ultrasonic_sensor.xacro
src/articubot_one/launch/: launch_robot.launch.py
src/get_ball_coordinates/: package.xml  setup.cfg  setup.py
src/get_ball_coordinates/get_ball_coordinates/: detect_ball.py  detect_ball3d.py  process_image.py
src/robot_autonomy/: CMakeLists.txt  package.xml
src/robot_autonomy/bt_xml/: tree.xml
src/robot_autonomy/include/: autonomy_node.h  go_to_ball_behavior.h  navigation_behaviors.h  scan_behavior.h
src/robot_autonomy/launch/: autonomy.launch.py  seek_ball.launch.py
src/robot_autonomy/src/: autonomy_node.cpp  go_to_ball_behavior.cpp  navigation_behaviors.cpp  scan_behavior.cpp
systemd_unit_files/: camera.service  lidar.service  robot.service  slam.service
